hphp/test/slow/parser/foreach-bad4.php.expectf

Fatal error: Can't use return value in write context in %s/test/slow/parser/foreach-bad4.php on line 5
